[package]
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
name = "libredrop-net"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.0.1"
bytes = "0.4.11"
future-utils = { git = "https://github.com/canndrew/future-utils", rev = "976f99f" }
futures = "0.1.25"
get_if_addrs = "0.5.3"
log = "0.4.6"
maidsafe_utilities = "0.17.0"
net-literals = "0.1.2"
safe_crypto = "0.5.0"
serde = "1.0.80"
serde_derive = "1.0.80"
tokio = "0.1.14"
unwrap = "1.2.1"
void = "1.0.2"
tokio-codec = "0.1.1"
err-derive = "0.1.5"

[dev-dependencies]
env_logger = "0.6.0"
hamcrest2 = "0.2.3"
chrono = "0.4.6"
hex = "0.3.2"
regex = "1.1.2"
maplit = "1.0.1"
rand = "0.6.5"
speculate = "0.1.2"
